feat: primera versión del portal sin envío de correos
